<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view" >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_email"
            android:title="@string/notifucation" />

        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/ic_call"
            android:title="@string/call" />

        <item
            android:id="@+id/nav_localisation"
            android:icon="@drawable/ic_localisation"
            android:title="@string/localisation" />

    </group>

    <item android:title="@string/communication">
        <menu>

            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title="@string/info" />

            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/contact" />


        </menu>

    </item>

</menu>