<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/med"
    android:orientation="vertical">

    <TextView
        android:id="@+id/contactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cabinet_mydoc"/>

    <TextView
        android:id="@+id/contactPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_20665478"/>

    <TextView
        android:id="@+id/contactEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_mydoc_contact_gmail_com"/>

    <TextView
        android:id="@+id/contactWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/site_http_www_google_com"/>
</LinearLayout>